z-index fixed

--- a/goodlookin/src/css/main.css
+++ b/goodlookin/src/css/main.css
@@ -20,7 +20,7 @@ a {
 p {
   /* color: #A2A2A2; */
   opacity: .6;
-  z-index: -1;
+  z-index: 0;
 }
 
 h3{
@@ -108,6 +108,7 @@ button:active{
   transition: transform .2s ease-out;
   padding-top: 42px;
   padding-bottom: 16px;
+  z-index: 1;
 }
 
 .menu__list {
@@ -172,7 +173,7 @@ button:active{
   margin-left: auto;
   margin-right: auto;
   opacity: .6;
-  z-index: -1;
+  z-index: 0;
   /* color: #a7a7a7; */
 }
 
@@ -206,7 +207,7 @@ button:active{
   font-size: 1.3rem;
   /* color: #676767; */
   opacity: 0.7;
-  z-index: -1;
+  z-index: 0;
   width: 27vw;
 }
 
@@ -301,7 +302,7 @@ button:active{
 .list__inactive {
   /* color: #a2a2a2; */
   opacity: .6;
-  z-index: -1;
+  z-index: 0;
 }
 
 .productlist {
@@ -359,7 +360,7 @@ button:active{
 
 .phone {
   opacity: .6;
-  z-index: -1;
+  z-index: 0;
   /* color: #A8A8A8; */
 }
 
@@ -375,7 +376,7 @@ button:active{
 .exclamation {
   color: #ff6600;
   opacity: 1;
-  z-index: -1;
+  z-index: 0;
 }
 
 .info {
